22.12.2010 git
- fix in head.inc.php as some browsers did not support the rough way it 
was implemented

1.2.1 Release Notes
- Support for PostgreSQL database works
- typo in bash client fixed which prevented deltasql bash client to work 
correctly

31.10.2010 git
- major fix in continouus integration script
- PostgreSQL support succesfully tested

29.9.2010 git
- added PostgreSQL support to bash client for continouus database 
integration
- raised version to 1.2.1

1.2.0 Release Notes 28.9.2010
Bash client is able to perform continouus database integration for 
Oracle and mySQL. Deltasql server is able to export scripts each one in 
a numbered file, grouped together in a zip file for further use in 
autoupdater tools (like the ones available at www.dbdeploy.com). 
Deltasql server adds support for sqlite databases.

27.10.2010 git
- raised version to 1.2.0
- added manual entry on how to install bash client

26.10.2010 git
- bash client: continouus integration works for Oracle
  several consistency checks added to bash client
  now envisioning PostgreSQL

24.10.2010 git
- bash client: continouus database integration works for mySQL schema. 
Now envisioning Oracle.
- added FAQ question which explains how to improve continouus integration with the
 deltasql bash client

23.10.2010 git
- added FAQ questions on how to download, test and checkout deltasql with git.

Bash client:
- continouus database integration is close to work for mySQL schemas

22.10.2010 git
- added FAQ question on formats which can be exported by deltasql

21.10.2010 git
Server changes
- added sqlite support (sync table definition)
- added ability to export the synchronization script as single files 
zipped to be used in dbdeploy like tools (check http://www.dbdeploy.com for more details)
- added zip library under /utils/createzip by Rochak Chauhan (www.rochakchauhan.com)

7.10.2010 1.1.1 Release Notes
Server changes
- improved error handling in synchronization step, 2 new error types 