@@ -6,6 +6,7 @@ CREATE TABLE `tbbranch` (
   `versionnr` int(11) NOT NULL,
   `create_dt` date NOT NULL,
   `visible` tinyint(1) NOT NULL default '1',
+  `sourcebranch` VARCHAR( 40 ) NULL,
   PRIMARY KEY  (`id`),
   UNIQUE KEY `name` (`name`)
 ) ENGINE=MyISAM  DEFAULT CHARSET=latin1 COLLATE=latin1_general_ci AUTO_INCREMENT=2 ;
